# LOVE-commander

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  COPYRIGHT.md  Dockerfile  Dockerfile-deploy  Dockerfile-dev  Jenkinsfile  Jenkinsfile.conda  LICENSE.md  README.md  commander_utils.py  docker-compose.yml  pyproject.toml  reqs1.txt  reqs2.txt  requirements-dev.txt  restore-permissions.sh  run-tests.sh  setup.cfg  setup.py  utils.py
commander/: __init__.py  app.py  commands.py  efd.py  heartbeats.py  lfa.py  lovecsc.py  lovecsc_controller.py  salinfo.py  start-daemon-deploy.sh  start-daemon-dev.sh  start-daemon.sh  tcs.py
conda/: meta.yaml
docker/: Dockerfile  Dockerfile-deploy  Dockerfile-dev  Dockerfile-test  docker-compose.yml  run-tests.sh  setup-dev.sh  start-daemon-deploy.sh  start-daemon-dev.sh  start-daemon.sh
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/apidoc/: commander.doctree  love.commander.doctree  love.doctree  modules.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docsrc/: Makefile  create_apidocs.sh  create_docs.sh  edit_apidoc_modules.py  make.bat
docsrc/source/: conf.py  index.rst
python/love/: __init__.py
python/love_commander.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_commands.py  test_efd.py  test_heartbeats.py  test_lfa.py  test_lovecsc.py  test_planningtool.py  test_reports.py  test_salinfo.py  test_tcs.py  test_utils.py
tests/data/: test_file.txt
ups/: love_commander.table
(+40 files in other folders)
