[flake8]
ignore=E133, E203, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503
exclude=__init__.py
max-line-length=110

[tool:pytest]
addopts = --flake8 --black 
flake8-ignore = E133 E203 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503

[metadata]
version = attr: setuptools_scm.get_version

[options]
setup_requires=setuptools_scm
